// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Indicator /> should render 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Success"
    accessible={true}
    data-blade-component="indicator"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="8"
        bbWidth="8"
        data-blade-component="icon"
        fill="none"
        focusable={false}
        height="8"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={10}
        vbWidth={10}
        width="8"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="5"
            cy="5"
            fill={
              {
                "payload": 4280563015,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="5"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        data-blade-component="base-box"
        style={
          [
            {
              "marginLeft": 0,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={100}
          style={
            [
              {
                "color": "hsla(211, 26%, 34%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="left"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`<Indicator /> should render different variants for size and color 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Warning"
    accessible={true}
    data-blade-component="indicator"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="6"
        bbWidth="6"
        data-blade-component="icon"
        fill="none"
        focusable={false}
        height="6"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": 6,
              "width": 6,
            },
          ]
        }
        vbHeight={10}
        vbWidth={10}
        width="6"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="5"
            cy="5"
            fill={
              {
                "payload": 4291189776,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="5"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        data-blade-component="base-box"
        style={
          [
            {
              "marginLeft": 0,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          style={
            [
              {
                "color": "hsla(211, 26%, 34%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="left"
        />
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Success"
    accessible={true}
    data-blade-component="indicator"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="8"
        bbWidth="8"
        data-blade-component="icon"
        fill="none"
        focusable={false}
        height="8"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={10}
        vbWidth={10}
        width="8"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="5"
            cy="5"
            fill={
              {
                "payload": 4278225477,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="5"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        data-blade-component="base-box"
        style={
          [
            {
              "marginLeft": 0,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={100}
          style={
            [
              {
                "color": "hsla(211, 26%, 34%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="left"
        />
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Error"
    accessible={true}
    data-blade-component="indicator"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="10"
        bbWidth="10"
        data-blade-component="icon"
        fill="none"
        focusable={false}
        height="10"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": 10,
              "width": 10,
            },
          ]
        }
        vbHeight={10}
        vbWidth={10}
        width="10"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="5"
            cy="5"
            fill={
              {
                "payload": 4292422944,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="5"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        data-blade-component="base-box"
        style={
          [
            {
              "marginLeft": 0,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={100}
          style={
            [
              {
                "color": "hsla(211, 26%, 34%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="left"
        />
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Info"
    accessible={true}
    data-blade-component="indicator"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="8"
        bbWidth="8"
        data-blade-component="icon"
        fill="none"
        focusable={false}
        height="8"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": 8,
              "width": 8,
            },
          ]
        }
        vbHeight={10}
        vbWidth={10}
        width="8"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="5"
            cy="5"
            fill={
              {
                "payload": 4279204270,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="5"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        data-blade-component="base-box"
        style={
          [
            {
              "marginLeft": 0,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={100}
          style={
            [
              {
                "color": "hsla(211, 26%, 34%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="left"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`<Indicator /> should render with intense emphasis 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Success"
    accessible={true}
    data-blade-component="indicator"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      alignItems="center"
      data-blade-component="base-box"
      display="flex"
      flexDirection="row"
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
        ]
      }
    >
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        align="xMidYMid"
        bbHeight="16"
        bbWidth="16"
        data-blade-component="icon"
        fill="none"
        focusable={false}
        height="16"
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={10}
        vbWidth={10}
        width="16"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGCircle
            cx="5"
            cy="5"
            fill={
              {
                "payload": 385917778,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="5"
          />
          <RNSVGCircle
            cx="5"
            cy="5"
            fill={
              {
                "payload": 4278225477,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
            r="2.5"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        data-blade-component="base-box"
        style={
          [
            {
              "marginLeft": 4,
            },
          ]
        }
      >
        <Text
          accessible={true}
          color="surface.text.gray.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="medium"
          lineHeight={75}
          style={
            [
              {
                "color": "hsla(211, 26%, 34%, 1)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 18,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="left"
        >
          Success
        </Text>
      </View>
    </View>
  </View>
</View>
`;
